// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label renders with all props 1`] = `
<label
  style={
    Object {
      "color": "rgba(60, 60, 60, 0.9)",
      "fontFamily": "ArtifaktElement, sans-serif",
      "fontSize": "14px",
      "fontWeight": 400,
      "lineHeight": "1.4",
      "opacity": "0.4",
    }
  }
>
  I am a label
</label>
`;

exports[`Label renders without props 1`] = `
<label
  style={
    Object {
      "color": "rgba(60, 60, 60, 0.9)",
      "fontFamily": "ArtifaktElement, sans-serif",
      "fontSize": "14px",
      "fontWeight": 400,
      "lineHeight": "1.4",
      "opacity": "1.0",
    }
  }
/>
`;
